# Minishell

./: .clang-format  .gitignore  .nfs0000000008d740260000b2d0  .nfs000000000c6616c8000037da  CMakeLists.txt  Makefile  PROCESS.md  README.md  minishell  out
.github/: contribute.json
include/: color.h  libft.h  minishell.h  types.h
lib/libft/: CMakeLists.txt  Makefile  ft_alnum.c  ft_atoi.c  ft_lstadd_back_bonus.c  ft_lstclear_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstnew.c  ft_lstnew_bonus.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_toupper.c  libft.h
src/: exec_main.c  main.c  parser_main.c
src/builtings/: append_red.c  builtings.c  cd.c  check_path.c  check_pipe.c  echo.c  env.c  env_to_list.c  exit.c  export.c  here_doc.c  other.c  pipex.c  pwd.c  red_in.c  red_out.c  unset.c
src/env/: ms_envlst_getter.c  ms_envlst_new.c  ms_init_env.c
src/environment/: clear_env.c  env_getter.c  init_env.c
src/errors/: custom_errors.c
src/expander/: expander.c  unquote.c
src/misc/: ms_prompt.c
src/parser/: clean_commands.c  parser.c  parsing_quotes.c  parsing_utils.c
src/tokenization/: lexer_utils.c  token_handlers.c  tokenize.c
src/tokenize/: ms_tokenize.c  ms_tokutils.c  tokenize.c
src/utils/: counting_utils.c  lexer_cleaning_utils.c  other_tools.c
